[package]
name = "pproxy"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
flexi_logger = "0.29"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "time"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
